--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         <title>Home</title>
         <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
         <link href="css/animate.css" type="text/css" rel="stylesheet">
-        <!-- <link href="fonts/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet"> -->
         <link href="fonts/fontawesome-pro-5.8.2-web/css/all.min.css" type="text/css" rel="stylesheet">
-        <!-- <link href="fonts/elegantIcon/elegantIcon.css" type="text/css" rel="stylesheet"> -->
         <link href="css/owl.carousel.min.css" type="text/css" rel="stylesheet">
         <link href="css/fancybox.css" type="text/css" rel="stylesheet">
         <link href="css/jquery.fullpage.css" type="text/css" rel="stylesheet">
@@ -46,7 +44,7 @@
                                     <div class="logo wow zoomIn" data-wow-delay='0.4s'>
                                         <a href="" title=""><img class="q-logo" src="images/logo.jpg" alt=""></a>
                                     </div>
-                                    <h1 class="title wow fadeInUp" data-wow-delay='1s'>Quy Luu, Web Front-end Development</h1>
+                                    <h1 class="title wow fadeInUp" data-wow-delay='1s'>Quy Luu, Web Front-end Developer</h1>
                                     <div class="desc wow fadeInUp" data-wow-delay='1s'>
                                         <p style="max-width:700px; margin: 0 auto;">You only live once, but if you do it right, once is enough.</p>
                                         <!-- <span>but the culture of eating noodles everyday will continue</span> -->
@@ -79,7 +77,7 @@
                                             <div class="row">
                                                 <div class="col-sm-6"><span>Phone: </span> <a href="tel:+84356688339" title="">(+84) 35 66 88 339</a></div>
                                                 <div class="col-sm-6"><span>Email: </span> <a href="mailto:quyluuxda@gmail.com" title="">quyluuxda@gmail.com</a></div>
-                                                <div class="col-sm-6"><span>Web: </span> <a href="#" title="">https//</a></div>
+                                                <div class="col-sm-6"><span>Web: </span> <a href="#" title="">https://</a></div>
                                                 <div class="col-sm-6"><span>Address: </span> <a href="#" title="">Nam Tu Liem District, Ha Noi</a></div>
                                             </div>
                                             <strong>Welcome to my profile !</strong>
