--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <div class="logo wow zoomIn" data-wow-delay='0.4s'>
                                         <a href="" title=""><img class="q-logo" src="images/logo.jpg" alt=""></a>
                                     </div>
-                                    <h1 class="title wow fadeInUp" data-wow-delay='1s'>Quy Luu, Web Front-end Developer</h1>
+                                    <h1 class="title wow fadeInUp" data-wow-delay='1s'>Quy Luu, Web Frontend Developer</h1>
                                     <div class="desc wow fadeInUp" data-wow-delay='1s'>
                                         <p style="max-width:700px; margin: 0 auto;">You only live once, but if you do it right, once is enough.</p>
                                         <!-- <span>but the culture of eating noodles everyday will continue</span> -->
