toan phat - CiC

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <div class="wrap-ct">
                                         <div class="ct">
                                             <p>Hi! I'm <span>Luu Van Quy</span></p>
-                                            <p>I had almost 1 year experiences in working as Frontend developer.</p>
+                                            <p>I had almost 2 year experiences in working as Frontend developer.</p>
                                             <p>Objective: Take advantage of the skills and experience in the learning process to become a professional programming expert and bring more value to customers.</p>
                                             <p>Contact</p>
                                             <div class="row">
@@ -108,15 +108,15 @@
                                                     <h3>HTML5</h3>
                                                     <div class="progress">
                                                          <div class="progress-bar color-1" role="progressbar" aria-valuenow="65"
-                                                          aria-valuemin="0" aria-valuemax="100" style="width:65%">
-                                                        <span>65%</span>
+                                                          aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                                                        <span>85%</span>
                                                           </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                                                 <div class="progress-wrap">
-                                                    <h3>jQuery</h3>
+                                                    <h3>Javascript</h3>
                                                     <div class="progress">
                                                          <div class="progress-bar color-2" role="progressbar" aria-valuenow="50"
                                                           aria-valuemin="0" aria-valuemax="100" style="width:50%">
@@ -130,8 +130,8 @@
                                                     <h3>CSS3</h3>
                                                     <div class="progress">
                                                          <div class="progress-bar color-3" role="progressbar" aria-valuenow="60"
-                                                          aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                                        <span>60%</span>
+                                                          aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                                        <span>80%</span>
                                                           </div>
                                                     </div>
                                                 </div>
@@ -149,11 +149,11 @@
                                             </div>
                                             <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                                 <div class="progress-wrap">
-                                                    <h3>Boostrap</h3>
+                                                    <h3>PHP</h3>
                                                     <div class="progress">
                                                          <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-                                                          aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                                        <span>60%</span>
+                                                          aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                                                        <span>30%</span>
                                                           </div>
                                                     </div>
                                                 </div>
@@ -225,11 +225,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="item">
-                                                    <a href="https://quyluuxda.github.io/toanphat/" title="" class="img">
+                                                    <a href="https://quyluuxda.github.io/CIC-group/" title="" class="img">
                                                         <img src="images/toan-phat.jpg" alt="">
                                                     </a>
                                                     <div class="ct">
-                                                        <h3 class="title"><a href="https://quyluuxda.github.io/toanphat/">Toan Phat</a></h3>
+                                                        <h3 class="title"><a href="https://quyluuxda.github.io/CIC-group/">CIC group</a></h3>
                                                         <span class="desc">Web built by HTML, CSS, Jquery</span>
                                                     </div>
                                                 </div>
